[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-plan-estimator"
version = "0.1.0"
description = "Building plan takeoff utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
